--- a/public/assets/styles/partials/_media-queries.scss
+++ b/public/assets/styles/partials/_media-queries.scss
@@ -19,6 +19,10 @@
     margin-bottom : 3rem;
   }
 
+  // MODAL
+  #imgModal {
+    top: 25%;
+  }
 
   .unico-info__title {
     font-size : var(--font-xl) !important;
